--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+:root{
+    --clr-font-dark: #352f36;
+    --clr-font-darker: #070607;
+    --clr-font-light: #FFFFF0;
+    --clr-rose-gold: #bd8c7d;
+    --clr-soft-gold: #d1bfa7;
+    --clr-silver: #8e8e90;
+    --clr-onyx: #49494b;
+}
+
 *, *::before, *::after {
     box-sizing: border-box;
 }
