feat: Add font stack

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 }
 
 body {
+    font-family: Optima, Candara, 'Noto Sans', source-sans-pro, sans-serif;
     line-height: calc(1ex / 0.32);
     -webkit-font-smoothing: antialiased;
 }
