--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 }
 
 body {
-    font-family: Optima, Candara, 'Noto Sans', source-sans-pro, sans-serif;
     line-height: calc(1ex / 0.32);
     -webkit-font-smoothing: antialiased;
 }
@@ -46,6 +45,29 @@ body {
     min-height: 100vh;
     background-color: var(--clr-font-light);
     color: var(--clr-font-dark);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 2.5rem 1fr 2.5rem;
+    grid-template-areas: 
+            "header main"
+            "hero main"
+            "footer footer";
+}
+
+.app-header {
+    grid-area: header;
+}
+
+.app-hero {
+    grid-area: hero;
+}
+
+.library {
+    grid-area: main;
+}
+
+.app-footer{
+    grid-area: footer;
 }
 
 
