feat: Add book numbering functionality
- Add sequential numbering to book list items
- Create new numberBooks function to update book numbers dynamically
- Update numbering when books are added or removed
- Add corresponding CSS styles for book number display

--- a/style.css
+++ b/style.css
@@ -205,6 +205,12 @@ body {
     justify-self: end;
 }
 
+.book-list__number {
+    grid-area: counter;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
 input,
 button {
     background-color: transparent;
